--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Rede social que permite criar um perfil, adicionar, remover e curtir fotos."
-    />
-    <meta name="keywords" content="Rede social, fotos, galeria" />
-    <meta name="author" content="Letícia Goliczevski Medeiros" />
+    <meta name="description" content="Rede social" />
+    <meta name="keywords" content="Rede social" />
+    <meta name="author" content="Luiz Antonio" />
     <title>Around the U.S.</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
@@ -27,7 +24,7 @@
           <img
             class="profile__picture"
             src="./images/profile-picture.jpg"
-            alt="Foto de um homem sorridente de gorro vermelho, camisa azul com o mar ao fundo."
+            alt="Foto de um homem."
           />
           <div class="profile__information">
             <div class="profile__name-and-icon">
@@ -171,7 +168,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p class="footer__copyright">&#169; 2024 Around The U.S.</p>
+        <p class="footer__copyright">&#169; 2024 Luiz Antonio</p>
       </footer>
     </div>
 
