--- a/src/index.html
+++ b/src/index.html
@@ -1,174 +1,140 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Rede social." />
-    <meta name="keywords" content="Rede social" />
-    <meta name="author" content="Luiz Antonio" />
-    <title>Around the U.S.</title>
-  </head>
-  <body>
-    <div class="page">
-      <header class="header">
-        <img
-          class="header__logo"
-          src="<%=require('./images/around.png')%>"
-          alt="Logo escrito 'Around the U.S.'"
-        />
-      </header>
+<html lang="pt">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Luiz Antonio">
+  <meta name="description" content="Rede social">
+  <meta name="keywords" content="html, css, javascript">
+  <title>Around the US</title>
+</head>
 
-      <main class="content">
-        <section class="profile">
-          <img
-            class="profile__picture"
-            src="<%=require('./images/profile-picture.jpg')%>"
-            alt="Foto de um homem."
-          />
-          <div class="profile__information">
-            <div class="profile__name-and-icon">
-              <h1 class="profile__name"></h1>
-              <img
-                class="profile__edit-icon"
-                src="<%=require('./images/edit-button.png')%>"
-                alt="Ícone de editar."
-              />
+<body class="body">
+  <div class="page">
+    <header class="header">
+      <div class="header__logo-content">
+        <img src="<%= require('./images/logo.png') %>" class="header__logo" alt="Imagem da logo">
+      </div>
+    </header>
+
+    <main class="main">
+      <section class="profile">
+        <div class="profile__content">
+          <div class="profile__image-container">
+            <img src="<%= require('./images/profile__image.jpg') %>" class="profile__image" alt="Imagem de perfil">
+          </div>
+          <div class="profile__text">
+            <div class="profile__title">
+              <p class="profile__name">Jacques Cousteau</p>
+              <div  class="profile__edit"></div>
             </div>
-            <p class="profile__description"></p>
+            <p class="profile__about">Explorar</p>
           </div>
-          <button class="profile__add-button">
-            <img
-              class="profile__add-button-plus-sign"
-              src="<%=require('./images/plus-sign.png')%>"
-              alt="Ícone de adicionar."
-            />
-          </button>
-        </section>
+        </div>
+        <div class="profile__add"></div>
+      </section>
 
-        <section class="gallery">
-          <ul class="gallery__cards">
-            <template id="card-template">
-              <li class="gallery__card">
-                <img class="gallery__card-image" src=" " />
-                <img
-                  class="gallery__delete-icon"
-                  src="<%=require('./images/delete-icon.png')%>"
-                  alt="Ícone de excluir."
-                />
-                <div class="gallery__card-info">
-                  <h2 class="gallery__card-title">Título</h2>
-                  <img
-                    class="gallery__heart-icon"
-                    src="<%=require('./images/heart-icon.png')%>"
-                    alt="Ícone de coração."
-                  />
-                </div>
-              </li>
-            </template>
-          </ul>
-        </section>
 
-        <section class="popup edit-profile-popup">
-          <div class="popup__container edit-profile-popup__container">
-            <img
-              class="popup__close-icon edit-profile-popup__close-icon"
-              src="<%=require('./images/close-icon.png')%>"
-              alt="Ícone de fechar."
-            />
-            <h2 class="popup__title">Editar perfil</h2>
-            <form class="popup__form edit-profile-popup__form" novalidate>
-              <div class="popup__inputs">
-                <input
-                  class="popup__input edit-profile-popup__input_name"
-                  type="text"
-                  placeholder="Nome"
-                  value="Jacques Cousteau"
-                  minlength="2"
-                  maxlength="40"
-                  required
-                />
-                <span
-                  class="popup__input-error edit-profile-popup__input_name_error"
-                ></span>
-                <input
-                  class="popup__input edit-profile-popup__input_about"
-                  type="text"
-                  placeholder="Sobre mim"
-                  value="Explorador"
-                  minlength="2"
-                  maxlength="200"
-                  required
-                />
-                <span
-                  class="popup__input-error edit-profile-popup__input_about_error"
-                ></span>
-              </div>
-              <button
-                class="popup__submit-button edit-profile-popup__submit-button"
-                type="submit"
-              >
-                Salvar
-              </button>
-            </form>
+      <section class="card">
+        <div class="card__gallery">
+          <h2 class="card__subtitle">Grid de imagens dos parques</h2>
+          <ul class="card__container"></ul>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">&copy;2024 Luiz Antonio</footer>
+
+    <section class="popup" id="popup-profile">
+      <form class="popup__form" novalidate>
+        <h2 class="popup__title">Editar perfil</h2>
+        <div class="popup__close"></div>
+
+        <div class="popup__input-profile">
+          <input id="popup-profile-name" class="popup__edit-text popup__name" minlength="2" maxlength="40" required type="text" placeholder="Nome">
+          <span class="popup__error" id="popup-profile-name-error"></span>
+
+          <input id="popup-profile-about" class="popup__edit-text popup__about" minlength="2" maxlength="40" required type="text" placeholder="Sobre">
+          <span class="popup__error" id="popup-profile-about-error"></span>
+        </div>
+        <button class="popup__button-save " type="submit">Salvar</button>
+      </form>
+    </section>
+
+    <section class="popup" id="popup-card">
+      <form class="popup__form" novalidate>
+        <h2 class="popup__title">Novo Local</h2>
+        <div class="popup__close"></div>
+
+        <div class="popup__input-card">
+          <input id="popup-card-name" class="popup__edit-text popup__image-name" minlength="2" maxlength="40" required type="text" placeholder="Nome">
+          <span class="popup__error" id="popup-card-name-error"></span>
+
+          <input id="popup-card-link" class="popup__edit-text popup__image-link" type="url" pattern="https?://.+" minlength="2" required placeholder="Link da Imagem">
+          <span class="popup__error" id="popup-card-link-error"></span>
+        </div>
+        <button class="popup__button-save" type="submit">Salvar</button>
+      </form>
+    </section>
+
+    <section class="popup" id="popup__profile-image">
+      <form class="popup__form" novalidate>
+        <h2 class="popup__title">Nova Foto de perfil</h2>
+        <div class="popup__close"></div>
+        <div class="popup__input-profile-img">
+          <input id="popup-profile-img-link" class="popup_edit-text popup_profile-img-link" type="url" pattern="https?://.+" minlength="2" required placeholder="Link da Imagem">
+          <span class="popup__error" id="popup-profile-img-error"></span>
+        </div>
+        <button class="popup__button-save" type="submit">Salvar</button>
+      </form>
+    </section>
+
+
+    <section class="popup popup_type_delete-card" id="popup_type_delete-card">
+      <form class="popup__form" novalidate>
+        <h2 class="popup__title">Você tem certeza?</h2>
+        <div class="popup__close"></div>
+
+
+        <button class="popup__button-save" type="button">Sim</button>
+      </form>
+    </section>
+
+
+
+
+    <template id="template-card">
+      <li class="cards__card">
+        <div class="cards__card_bin"></div>
+        <img class="cards__card_image" src="" alt="">
+        <div class="cards__card_text">
+          <p class="cards__card_name"></p>
+          <div class="cards__card_like-info">
+            <button class="cards__card_heart" aria-label="Curtir"></button> <!-- Botão de curtida -->
+
+            <p class="cards__card_like-count">0</p> <!-- Contador de curtidas -->
           </div>
-        </section>
+        </div>
+      </li>
+    </template>
 
-        <section class="popup add-card-popup">
-          <div class="popup__container add-card-popup__container">
-            <img
-              class="popup__close-icon add-card-popup__close-icon"
-              src="<%=require('./images/close-icon.png')%>"
-              alt="Ícone de fechar."
-            />
-            <h2 class="popup__title">Novo local</h2>
-            <form class="popup__form add-card-popup__form" novalidate>
-              <div class="popup__inputs">
-                <input
-                  class="popup__input add-card-popup__input_title"
-                  type="text"
-                  placeholder="Título"
-                  minlength="2"
-                  maxlength="30"
-                  required
-                />
-                <span
-                  class="popup__input-error add-card-popup__input_title_error"
-                ></span>
-                <input
-                  class="popup__input add-card-popup__input_link"
-                  type="url"
-                  placeholder="Link de imagem"
-                  required
-                />
-                <span
-                  class="popup__input-error add-card-popup__input_link_error"
-                ></span>
-              </div>
-              <button
-                class="popup__submit-button add-card-popup__submit-button"
-                type="submit"
-              >
-                Criar
-              </button>
-            </form>
-          </div>
-        </section>
 
-        <section class="popup image-popup">
-          <div class="image-popup__container">
-            <img
-              class="popup__close-icon"
-              src="<%=require('./images/close-icon.png')%>"
-              alt="Ícone de fechar."
-            />
-            <img class="image-popup__image" src=" " />
-            <h2 class="image-popup__title"></h2>
-          </div>
-        </section>
-      </main>
-      <footer class="footer">
-        <p class="footer__copyright">&#169; 2024 Luiz Antonio</p>
-      </footer>
-    </div>
-  </body>
+
+
+    <section class="modalImage">
+      <div class="modalImage__container">
+        <span class="modalImage__close"></span>
+        <img class="modalImage__content">
+        <p class="modalImage__caption"></p>
+      </div>
+    </section>
+
+
+
+
+
+  </div>
+
+</body>
+
 </html>
